Remove font-mfizz as it's no longer needed and fix a couple of minor layout issues.

--- a/pgaweb/static/css/pgaweb.scss
+++ b/pgaweb/static/css/pgaweb.scss
@@ -455,6 +455,10 @@ a {
   color: #000;
 }
 
+.pga-toolbar-search {
+    color: $color-bg;
+}
+
 /* Pygments styles */
 .highlight .hll { background-color: #ffffcc }
 .highlight  { background: #eeffcc; }
